# tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  tyoaikakirjanpito.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: csv_lukija.py  index.py
src/data/: Boston_1_1024.png.csv
src/entities/: kuva.py  kuvaaja.py  matriisi.py
src/enums/: algortimi.py
src/repository/: talletus.py
src/services/: a_star.py  algoritmi.py  analysoi.py  csv_lukija.py  heuristiikka.py  heuristiikkafunktio.py  jps.py  jps_oliosolmuilla.py  kuva.py  kuvaaja.py  kuvanpiirtaja.py  matriisi.py  suorituskykytestaus.py  talletus.py
src/tests/: a_star_test.py  algoritmi_test.py  jps_test.py  suorituskykytestaus.py
src/ui/: ui.py
