[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["J-Uhero <juho.herranen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.0.1"
invoke = "^1.7.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "^7.1.1"
pylint = "^2.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
